# virtual_cpd

cpd/: CMakeLists.txt  Doxyfile  build_x32.bat  build_x64.bat
cpd/docs/html/: annotated.html  classes.html  com__port__driver_8c.html  com__port__driver_8h.html  com__port__driver_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  serial_8h.html  serial_8h_source.html  structserial__timeouts.html  structvdevice__context.html  trace_8h.html  trace_8h_source.html  virtual__device_8c.html  virtual__device_8h.html  virtual__device_8h_source.html
cpd/docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  (+8 more)
cpd/docs/latex/: annotated.tex  com__port__driver_8c.tex  com__port__driver_8h.tex  com__port__driver_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  serial_8h.tex  serial_8h_source.tex  structserial__timeouts.tex  structvdevice__context.tex  trace_8h.tex  trace_8h_source.tex  virtual__device_8c.tex  virtual__device_8h.tex  virtual__device_8h_source.tex
cpd/include/: com_port_driver.h  serial.h  trace.h  virtual_device.h
cpd/src/: com_port_driver.c  virtual_device.c
(+1 files in other folders)
